added list to gallery

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,8 @@ header{
 section{
     display: flex;
     background-color: darksalmon;
-    color: #fff
+    color: #fff;
+    border-bottom: lightgoldenrodyellow;
 }
 
 footer{
