--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ html { box-sizing: border-box;}
 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
+html{
+    font-size: 125%;
+}
+
 header{
     background-color: darkslateblue;
     color: #fff;
@@ -23,4 +27,9 @@ footer{
     background-color: lightsalmon;
     color: #000;
 
+}
+
+p{
+    font-weight: 200;
+    font-size: 0.8 rem;
 }
